--- a/pages/workshop/NumPy/NumPy Broadcasting and Vectorization.ipynb
+++ b/pages/workshop/NumPy/NumPy Broadcasting and Vectorization.ipynb
@@ -47,9 +47,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([15, 25, 35, 45])"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "\n",
@@ -66,9 +77,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([15, 25, 35, 45])"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "b = np.array([5])\n",
     "a + b"
@@ -88,9 +110,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([15, 25, 40, 50])"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "b = np.array([5, 5, 10, 10])\n",
     "a + b"
@@ -105,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,9 +147,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[11, 21, 31, 41],\n",
+       "       [12, 22, 32, 42],\n",
+       "       [13, 23, 33, 43],\n",
+       "       [14, 24, 34, 44],\n",
+       "       [15, 25, 35, 45]])"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "result = np.empty((5, 4), dtype=np.int32)\n",
     "for row, valb in enumerate(b):\n",
@@ -134,9 +182,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[10, 20, 30, 40],\n",
+       "       [10, 20, 30, 40],\n",
+       "       [10, 20, 30, 40],\n",
+       "       [10, 20, 30, 40],\n",
+       "       [10, 20, 30, 40]])"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "aa = np.tile(a, (5, 1))\n",
     "aa"
@@ -144,9 +207,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1, 1, 1, 1],\n",
+       "       [2, 2, 2, 2],\n",
+       "       [3, 3, 3, 3],\n",
+       "       [4, 4, 4, 4],\n",
+       "       [5, 5, 5, 5]])"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Turn b into a column array, then tile it\n",
     "bb = np.tile(b.reshape(5, 1), (1, 4))\n",
@@ -155,9 +233,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[11, 21, 31, 41],\n",
+       "       [12, 22, 32, 42],\n",
+       "       [13, 23, 33, 43],\n",
+       "       [14, 24, 34, 44],\n",
+       "       [15, 25, 35, 45]])"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "aa + bb"
    ]
@@ -871,7 +964,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -885,7 +978,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.8.12"
   }
  },
  "nbformat": 4,
