Update Introduction to MetPy.ipynb

--- a/pages/workshop/Metpy_Introduction/Introduction to MetPy.ipynb
+++ b/pages/workshop/Metpy_Introduction/Introduction to MetPy.ipynb
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,9 +76,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10.4 inch 20 meter\n"
+     ]
+    }
+   ],
    "source": [
     "length = 10.4 * units.inches\n",
     "width = 20 * units.meters\n",
@@ -96,9 +104,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "208.0 inch * meter\n"
+     ]
+    }
+   ],
    "source": [
     "area = length * width\n",
     "print(area)"
@@ -113,9 +129,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "5.2832 meter<sup>2</sup>"
+      ],
+      "text/latex": [
+       "$5.2832\\ \\mathrm{meter}^{2}$"
+      ],
+      "text/plain": [
+       "5.2832 <Unit('meter ** 2')>"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "area.to('m^2')"
    ]
@@ -136,11 +169,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "77332.22424242426 furlong\n"
+     ]
+    }
+   ],
    "source": [
-    "# YOUR CODE GOES HERE"
+    "speed = 25 * units.knots\n",
+    "time = 1 * units.fortnight\n",
+    "distance = speed * time\n",
+    "print(distance.to('furlongs'))"
    ]
   },
   {
@@ -154,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -185,9 +229,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "5 delta_degree_Celsius"
+      ],
+      "text/latex": [
+       "$5\\ \\mathrm{delta\\_degree\\_Celsius}$"
+      ],
+      "text/plain": [
+       "5 <Unit('delta_degree_Celsius')>"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "10 * units.degC - 5 * units.degC"
    ]
@@ -201,9 +262,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "27.77777777777778 degree_Celsius"
+      ],
+      "text/latex": [
+       "$27.77777777777778\\ \\mathrm{degree\\_Celsius}$"
+      ],
+      "text/plain": [
+       "27.77777777777778 <Unit('degree_Celsius')>"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "25 * units.degC + 5 * units.delta_degF"
    ]
@@ -217,18 +295,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "283 kelvin"
+      ],
+      "text/latex": [
+       "$283\\ \\mathrm{kelvin}$"
+      ],
+      "text/plain": [
+       "283 <Unit('kelvin')>"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "273 * units.kelvin + 10 * units.kelvin"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "263 kelvin"
+      ],
+      "text/latex": [
+       "$263\\ \\mathrm{kelvin}$"
+      ],
+      "text/plain": [
+       "263 <Unit('kelvin')>"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "273 * units.kelvin - 10 * units.kelvin"
    ]
@@ -243,9 +355,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "20 degree_Celsius"
+      ],
+      "text/latex": [
+       "$20\\ \\mathrm{degree\\_Celsius}$"
+      ],
+      "text/plain": [
+       "20 <Unit('degree_Celsius')>"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# 12 UTC temperature\n",
     "temp_initial = 20 * units.degC\n",
@@ -261,9 +390,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "25 degree_Celsius"
+      ],
+      "text/latex": [
+       "$25\\ \\mathrm{degree\\_Celsius}$"
+      ],
+      "text/plain": [
+       "25 <Unit('degree_Celsius')>"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# New 18 UTC temperature\n",
     "temp_new = temp_initial + 5 * units.delta_degC\n",
@@ -283,11 +429,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "13.5 degree_Celsius\n"
+     ]
+    }
+   ],
    "source": [
-    "# YOUR CODE GOES HERE"
+    "temperature_change_rate = -2.3 * units.delta_degF / (10 * units.minutes)\n",
+    "temperature = 25 * units.degC\n",
+    "dt = 1.5 * units.hours\n",
+    "print(temperature + temperature_change_rate * dt)"
    ]
   },
   {
@@ -301,7 +458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -329,7 +486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -338,18 +495,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "6371008.7714 meter"
+      ],
+      "text/latex": [
+       "$6371008.7714\\ \\mathrm{meter}$"
+      ],
+      "text/plain": [
+       "6371008.7714 <Unit('meter')>"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "mpconst.earth_avg_radius"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "0.02896546 kilogram/mole"
+      ],
+      "text/latex": [
+       "$0.02896546\\ \\frac{\\mathrm{kilogram}}{\\mathrm{mole}}$"
+      ],
+      "text/plain": [
+       "0.02896546 <Unit('kilogram / mole')>"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "mpconst.dry_air_molecular_weight"
    ]
@@ -363,18 +554,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "6371008.7714 meter"
+      ],
+      "text/latex": [
+       "$6371008.7714\\ \\mathrm{meter}$"
+      ],
+      "text/plain": [
+       "6371008.7714 <Unit('meter')>"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "mpconst.Re"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "0.02896546 kilogram/mole"
+      ],
+      "text/latex": [
+       "$0.02896546\\ \\frac{\\mathrm{kilogram}}{\\mathrm{mole}}$"
+      ],
+      "text/plain": [
+       "0.02896546 <Unit('kilogram / mole')>"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "mpconst.Md"
    ]
@@ -400,7 +625,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -410,14 +635,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[14.0 2.0 12.0 5.0 3.0 5.0 14.0 8.0 15.0 10.0] meter / second\n",
+      "[13.0 18.0 19.0 5.0 0.0 6.0 8.0 8.0 8.0 14.0] meter / second\n"
+     ]
+    }
+   ],
    "source": [
     "# Make some fake data for us to work with\n",
     "np.random.seed(19990503)  # So we all have the same data\n",
-    "u = np.random.randint(0, 15, 10) * units('m/s')\n",
-    "v = np.random.randint(0, 15, 10) * units('m/s')\n",
+    "u = np.random.randint(0, 20, 10) * units('m/s')\n",
+    "v = np.random.randint(0, 20, 10) * units('m/s')\n",
     "\n",
     "print(u)\n",
     "print(v)"
@@ -432,9 +666,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[227.12109639666144 186.34019174590992 212.27564431457762 225.0 270.0 219.8055710922652 240.25511870305778 225.0 241.92751306414706 215.53767779197437] degree\n"
+     ]
+    }
+   ],
    "source": [
     "direction = mpcalc.wind_direction(u, v)\n",
     "print(direction)"
@@ -455,11 +697,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[19.1049731745428 18.110770276274835 22.47220505424423 7.0710678118654755 3.0 7.810249675906654 16.1245154965971 11.313708498984761 17.0 17.204650534085253] meter / second\n",
+      "[42.73660785286059 40.512639308059306 50.26889104832728 15.81752821193959 6.710808876163206 17.471030950041726 36.06951390613166 25.308045139103346 38.027916964924835 38.48570717180846] mile_per_hour\n"
+     ]
+    }
+   ],
    "source": [
-    "# YOUR CODE GOES HERE"
+    "speed = mpcalc.wind_speed(u, v)\n",
+    "print(speed.to('m/s'))\n",
+    "print(speed.to('mph'))"
    ]
   },
   {
@@ -473,7 +726,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -489,9 +742,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "20.264799097790046 degree_Celsius"
+      ],
+      "text/latex": [
+       "$20.264799097790046\\ \\mathrm{degree\\_Celsius}$"
+      ],
+      "text/plain": [
+       "20.264799097790046 <Unit('degree_Celsius')>"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "mpcalc.dewpoint_from_relative_humidity(25 * units.degC, 75 * units.percent)"
    ]
@@ -507,7 +777,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -521,7 +791,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.8.12"
   }
  },
  "nbformat": 4,
